# hermes-rest-api

./: .gitignore  ARCHITECTURE.md  PLAN.md  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  models.py
app/services/: agent.py  session.py
docs/: front_door_architecture.md
hermes_api/: requirements.txt
hermes_api/app/: agent_factory.py  config.py  main.py  schemas.py  sessions.py
hermes_api/app/routes/: __init__.py  messages.py  sessions.py
hermes_api/app/services/: governor_client.py
tests/: test_api.py
