[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hermes-rest-api"
version = "0.1.0"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["hermes_api"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["hermes_api*"]
